# VolumeVisualizationGL

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
.clangd/index/: FILE.h.0B47AA35880D6C68.idx  GLContext.hpp.FF23DEF75F27A190.idx  GLImpl.hpp.95FD8472970AE079.idx  __FILE.h.6F8BF1EA128A85A8.idx  __fpos64_t.h.76CFE28F9C6B8241.idx  __fpos_t.h.9C6C7821CAFB6728.idx  __locale_t.h.3F73A78C1398A1A9.idx  __mbstate_t.h.18CD360ACD7D77DA.idx  __sigset_t.h.6BFEE909145251C5.idx  __stddef_max_align_t.h.81421FD8478D3F1E.idx  algorithm.F90DB0A92772EA5F.idx  algorithmfwd.h.6679E05849D5F54B.idx  aligned_buffer.h.54B510892B87C25E.idx  alloc_traits.h.185D1CD5B7463772.idx  alloc_traits.h.1E77E30CE77E9D64.idx  alloca.h.B3C3404035C15EA6.idx  allocated_ptr.h.7E5E6A3C862A835E.idx  allocator.h.E8EEA51D4415153A.idx  allocators.h.BA9A640D10713939.idx  appearance.cpp.B7D56E0CB43D733A.idx  appearance.h.170A8A0DE6A2A6CA.idx  arcball.cpp.90B165E7475130E6.idx  arcball.h.EDCE68445A3D988B.idx  arithmetic.h.9FC50DD155184C4A.idx  array.D300F9F48C4F8264.idx  assert.h.F44EF353D67C7E11.idx  assertions.h.BD82AFA1E740D105.idx  atomic.7DBD9C49A8EF19A2.idx  atomic_base.h.43194A004E063A0A.idx  atomic_futex.h.94AB3B6463F58F34.idx  atomic_lockfree_defines.h.D2739010F5F1B632.idx  atomic_word.h.8555F6A8CFF4D5BE.idx  atomicity.h.029655BB118F0F1E.idx  attributes.hpp.5FE5BDFA7415DD1B.idx  auto_ptr.h.098CF21651CDF6F6.idx  basic_file.h.97D921AAA0DAA27E.idx  basic_ios.h.AADA7DEA118B733F.idx  basic_ios.tcc.23B3A017B90642F2.idx  basic_string.h.3B652624150345AF.idx  basic_string.tcc.4C5A52FCB8D333F6.idx  (+453 more)
gl3w/GL/: gl3w.c
include/: GLContext.hpp  GLImpl.hpp  jsondef.hpp
resources/: blockraycasting_f.glsl  naiveraycast_f.glsl  position_f.glsl  position_v.glsl  screenquad_f.glsl  screenquad_v.glsl  trivial_fs.glsl  trivial_vs.glsl
resources/data/: data.json  data.lods  s1.brv  s1_128_128_128.raw  sb__128_128_128.lvd  simple_128_128_128.raw  test.brv  test.tf
src/: CMakeLists.txt  main.cpp
src/plugins/: CMakeLists.txt  lvdfile.cpp  lvdfile.h  lvdfileheader.cpp  lvdfileheader.h  lvdfileplugin.cpp  lvdfileplugin.h  lvdfilereader.cpp  lvdfilereader.h
test/: CMakeLists.txt  test_lvdwr.cpp
